--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -320,17 +320,17 @@ Full-Width Styles
   bottom: -40px;
   right: 0;
   height: 70px;
-  background: url('../images/icon_download.png') no-repeat 40% 95%;
+  background: url('../images/icon_download.png') no-repeat 57% 85%;
 }
 
 .download_link {
   display: block;
   float: right;
-  width: 100px;
-  height:100px;
-  text-indent: -5000px;
+  width: 90px;
+  height:70px;
   overflow: hidden;
-  background: url(../images/zip-icon.jpg) no-repeat;
+  background: url(../images/sprite_download.png) no-repeat;
+  background-position: 0 0;
 }
 
 #main_content_wrap {
